[bug] fix input double spacing

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -191,7 +191,7 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 }
 
 button {
